Fixed bug that cut off top of form when on mobile.

--- a/BasicForm/css/styles.css
+++ b/BasicForm/css/styles.css
@@ -14,6 +14,7 @@ form {
 }
 
 .form-class {
+    margin-top: 50px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -28,7 +29,7 @@ form {
 }
 
 button {
-    margin: auto 20px;
+    margin: 0 20px 10px;
     text-align: center;
 }
 
